--- a/CalSmokeApp/Gemfile
+++ b/CalSmokeApp/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
-gem 'calabash-cucumber', :github => "calabash/calabash-ios", :branch => "develop"
-gem "run_loop", :github => "calabash/run_loop", :branch => "develop"
+gem 'calabash-cucumber', '0.20.4'
+gem "run_loop"
 
 # workflow and build tools
 gem 'retriable', '~> 2.0'
